--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/main/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Home</title>
 </head>
     <body>
@@ -26,7 +26,7 @@
                 <h1>PORTFOLIO</h1>
             </div>
             <div class="hero-image">
-                <img src="/images/cut_portrait.png" alt="Profile Photo">
+                <img src="cut_portrait.png" alt="Profile Photo">
             </div>
         </section>
         <footer class="footer">
