--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <footer class="footer">
             <h3>Katlego Tsotetsi</h3>
             <p>Computer Science Student</p>
+            <p>Still In construction😅</p>
         </footer>
     </body>
 </html>
