--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             <nav class="navdiv">
                 <div class="logo"><a href="#">MyPortfolio</a> </div>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Projects</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="project.html">Projects</a></li>
                         <li><a href="#">Contact</a></li>
                         
                     </ul>
