--- a/about.html
+++ b/about.html
@@ -1,26 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>about</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>About</title>
+</head>
+
     <body>
-        <nav class="navbar">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="testing.html">Testing</a></li>
-            </ul>
-        </nav>
-        <div class="_aboutInfo">
-            <h2>About</h2>
-            <p class = "_about_info">
-                Hi, <br> I’m Katlego Tsotetsi, a curious, driven learner with a growing passion for cybersecurity and cloud technology. I enjoy breaking down complex problems, understanding how systems work (and how they break), and building the discipline to get a little better every day.
-                Right now, I’m deep in learning mode. Every course, lab, and project is part of a bigger goal: becoming someone who adds real value through skill, integrity, and consistency.
-            </p>
-        </div>
+        <header class="navbar">
+            <nav class="navdiv">
+                <div class="logo"><a href="#">MyPortfolio</a> </div>
+                    <ul> 
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="project.html">Projects</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+        </header>
+        
+        <main class="container">
+            <section class="bio">
+                <h1>Hi, I'm Katlego</h1>
+                <p class="lead">A web developer and designer building clean, modern experiences</p>
+                <p>I’m currently focused on mastering HTML, CSS, and responsive design while sharpening my sense for layout, color, and typography.</p>
+                <p>I got into web development because I’ve always liked understanding how things work beneath the surface. The more I learned, the more I realized I enjoy the mix of logic and creativity — writing code that not only works, but also looks good and feels good to use.</p>
+            </section>
+
+            <hr>
+
+            <section class="skills-container">
+                <div class="skill-box">
+                    <h2>The goal</h2>
+                    <p>To grow into a Web developer who creates polished, user-focused websites with clean code and thoughtful design </p>
+                </div>
+
+                <div class="skill-box">
+                    <h2>Areas of Expertise</h2>
+                    <ul class=""tag-list>
+                        <li>HTML5</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                        <li>Python</li>
+                        <li>Git & GitHub</li>
+                        <li>VS Code</li>
+                        <li>Figma</li>
+                    </ul>
+                </div>
+
+                <div class="skill-box">
+                    <h2>Beyond Code</h2>
+                    <p>Outside of dev, I enjoy improving myself physically and mentally, and playing serious, fast-paced chess.</p>
+                </div>
+            </section>
+
+            <footer class="closing">
+                <p><em>Every day, the goal is to build something better than yesterday.</em></p>
+            </footer>
+        </main>
     </body>
 </html>
