--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="testing.html">Testing</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
         <div class = _projectsInfo>
